erDiagram
    PROJECT {
        UUID id PK
        VARCHAR name
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    USER {
        UUID id PK
        UUID project_id FK
        VARCHAR name
        VARCHAR second_name
        VARCHAR email
        VARCHAR password
    }

    MILESTONE {
        UUID id PK
        UUID project_id FK
        UUID manager_id FK
        VARCHAR label
        DATE planned_start_date
        DATE actual_start_date
    }

    REQUIREMENT_TYPE {
        UUID id PK
        VARCHAR description
    }

    REQUIREMENT {
        UUID id PK
        UUID project_id FK
        UUID requirement_type_id FK
        TEXT description
        BOOLEAN is_functional
        TIMESTAMP created_at
        DATE updated_at
    }

    TASK {
        UUID id PK
        UUID milestone_id FK
        UUID manager_id FK
        UUID previous_task_id FK
        BOOLEAN is_functional
        VARCHAR label
        DATE planned_start_date
        DATE actual_start_date
        INT days_estimate
    }

    TASK_REQUIREMENT {
        UUID task_id PK
        UUID requirement_id PK
    }

    %% Relations
    PROJECT ||--o{ USER : has
    PROJECT ||--o{ MILESTONE : contains
    PROJECT ||--o{ REQUIREMENT : contains

    USER ||--o{ MILESTONE : manages
    USER ||--o{ TASK : manages

    MILESTONE ||--o{ TASK : contains

    REQUIREMENT_TYPE ||--o{ REQUIREMENT : defines

    TASK ||--o{ TASK_REQUIREMENT : linked_to
    REQUIREMENT ||--o{ TASK_REQUIREMENT : linked_to

    TASK ||--o{ TASK : previous_task
